# gmail-ai-agent

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gmail_ai_agent/: Dockerfile  __init__.py
gmail_ai_agent/api/: main.py
gmail_ai_agent/config/: settings.py
gmail_ai_agent/core/: agent.py  email_processor.py  llm_processor.py  rag_processor.py
gmail_ai_agent/ui/: app.py
